# LDaCA-Text-Analytics-Tools

./: .gitignore  .gitmodules  LDaCa_Analysis.ipynb  LDaCa_Analysis_colab.ipynb  README.md  ldaca_web_app_launch.ipynb  pyproject.toml  run.sh  start
.github/: copilot-instructions.md
.github/instructions/: ai-prompt-engineering-safety-best-practices.instructions.md  ldaca_dev.instructions.md
.github/workflows/: desktop-macos.yml  desktop-windows.yml  repo2docker-dockerhub.yml
binder/: Dockerfile  environment.yml  postBuild
docs/: index.md
docs/developer-guide/: repo-overview.md
docs/plans/: 2026-01-22-docs-rewrite.md
docs/reference/: commands.md
docs/tutorials/: first-steps.md
docs/user-guide/: getting-started.md
