[project]
name = "ldaca-web-app-binder"
version = "0.1.0"
description = "Binder wrapper for the LDaCA web application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"ipykernel>=7.2.0",
	"jupyter-server-proxy>=4.4.0",
	"ldaca-web-app-backend",
]

[tool.uv.sources]
ldaca-web-app-backend = { path = "ldaca_web_app/backend", editable = true }
