[project]
name = "ldaca-web-app-binder"
version = "0.1.0"
description = "Binder wrapper for the LDaCA web application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"ipykernel>=7.2.0",
	"jupyter-server-proxy>=4.4.0",
	"ldaca-loader",
	"ldaca-web-app-backend>=0.2.0",
]

[tool.uv.sources]
ldaca-loader = { git = "https://github.com/Australian-Text-Analytics-Platform/ldaca-tabulator", branch = "ldaca_web_app_integration" }
